tests/lifetime/nll/nll_unborrow_errors.err.expected
error: at 21:5: [INIT-RefObligationUnfulfilled] In function 'out_param_never_written', block 'entry': reference 'x' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 21 |     return
    |     ^^^^^^
  = note: reference declared here
    |
 19 | fn out_param_never_written(x: &out i64) {
    |                            ^^^^^^^^^^^
error: at 32:5: [INIT-RefObligationUnfulfilled] In function 'out_branch_return_without_write', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 32 |     branch(copy b) [true: return_arm, false: die_arm]
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: reference declared here
    |
 30 | fn out_branch_return_without_write(r: &out i64, b: bool) {
    |                                    ^^^^^^^^^^^
